# CppMISC

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  add.S  main.cpp
.github/workflows/: CI-Gtest.yml
design_pattern/construct/singleton/: Singleton.hh  test.cc
include/: mutex.hh  type_traits.hh
misc/pattern_match/: main.cpp
pattern/: CMakeLists.txt  README.md
pattern/1_1_creational/: CMakeLists.txt
pattern/1_1_creational/abstract_factory/: DomainFactory.cpp  DomainFactory.hpp
pattern/1_1_creational/abstract_factory/include/: AbstractApple.hpp  AbstractBanana.hpp  AbstractFactory.hpp
pattern/1_1_creational/abstract_factory/src/: CNApple.hpp  CNBanana.hpp  CNFactory.cpp  CNFactory.hpp  USAApple.hpp  USABanana.hpp  USAFactory.hpp
pattern/1_1_creational/builder/: CMakeLists.txt  README.md
pattern/1_1_creational/builder/include/: Builder.hpp  Director.hpp  Product.hpp
pattern/1_1_creational/builder/src/: ConcreteBuilder.cpp  ConcreteBuilder.hpp  Director.cpp
pattern/1_1_creational/factory/: CMakeLists.txt  README.md  test_factory.cc
pattern/1_1_creational/factory/include/: SettingFactory.hpp  SettingInterface.hpp
pattern/1_1_creational/factory/src/: SettingFactory.cpp  SettingImpl.hpp
pattern/1_1_creational/prototype/: CMakeLists.txt  README.md
pattern/1_1_creational/prototype/src/: Sheep.cpp
pattern/1_1_creational/singleton/: CMakeLists.txt  LazySingleton.hpp  Singleton.cpp  Singleton.hpp
pattern/1_2_structural/: CMakeLists.txt
pattern/1_2_structural/adapter/: README.md
pattern/1_2_structural/bridge/: CMakeLists.txt  test_bridge.cc
pattern/1_2_structural/bridge/include/: IProvider.hpp  IService.hpp
pattern/1_2_structural/bridge/src/: ProviderImpl.hpp  ServiceImpl.hpp
pattern/1_2_structural/composite/: CMakeLists.txt  README.md  test_composite.cc
pattern/1_2_structural/composite/include/: Component.hpp  Composite.hpp  Leaf.hpp
pattern/1_2_structural/decorator/: CMakeLists.txt  test_decorator.cc
pattern/1_2_structural/decorator/include/: ConferenceTicket.hpp  CppBook.hpp  DecoratedItem.hpp  Discounted.hpp  Item.hpp  Taxed.hpp
pattern/1_2_structural/facade/: README.md
pattern/1_2_structural/flyweight/: README.md
pattern/1_2_structural/proxy/: CMakeLists.txt  README.md  test_proxy.cc
pattern/1_2_structural/proxy/include/: Proxy.hpp  Subject.hpp
pattern/1_2_structural/proxy/src/: Proxy.cpp  SubjectImpl.cpp  SubjectImpl.hpp
pattern/1_3_behavioral/: CMakeLists.txt
pattern/1_3_behavioral/chain_of_responsibility/: CMakeLists.txt  test_chain_of_responsibility.cc
pattern/1_3_behavioral/chain_of_responsibility/include/: ConcreteHandler0.hpp  ConcreteHandler1.hpp  Handler.hpp
pattern/1_3_behavioral/command/: README.md
pattern/1_3_behavioral/interpreter/: README.md
pattern/1_3_behavioral/iterator/: README.md
pattern/1_3_behavioral/mediator/: README.md
pattern/1_3_behavioral/memento/: CMakeLists.txt  test_memento.cc
pattern/1_3_behavioral/memento/include/: Originator.hpp
pattern/1_3_behavioral/memento/src/: CareTaker.hpp  Memento.hpp  Originator.cpp
pattern/1_3_behavioral/observer/: CMakeLists.txt  README.md  test_observer.cc
pattern/1_3_behavioral/observer/include/: Subject.hpp
pattern/1_3_behavioral/state/: CMakeLists.txt  Context.hpp  State.hpp  test_state.cc
pattern/1_3_behavioral/state/include/: Context.hpp  State.hpp
pattern/1_3_behavioral/state/src/: Context.cpp  InitState.cpp  InitState.hpp  WaitState.cpp  WaitState.hpp
pattern/1_3_behavioral/strategy/: CMakeLists.txt  test_strategy.cc
pattern/1_3_behavioral/strategy/include/: Context.hpp  Strategy.hpp
pattern/1_3_behavioral/strategy/src/: AddStrategy.hpp  Context.cpp  SubStrategy.hpp
pattern/1_3_behavioral/template/: IDisplay.hpp  StrDisplay.hpp
pattern/1_3_behavioral/template_method/: CMakeLists.txt  IDisplay.hpp  StrDisplay.hpp  test_template.cc
pattern/1_3_behavioral/visitor/: CMakeLists.txt  test_visitor.cc
pattern/behavior/: CMakeLists.txt
pattern/behavior/abstract_method/: IDisplay.hh  StrDisplay.hh  test.cc
pattern/behavior/strategy/: AddStrategy.hpp  CMakeLists.txt  Context.hpp  Strategy.hpp  SubStrategy.hpp  test_strategy.cc
pattern/behavior/template/: test_template.cc
pattern/construct/: CMakeLists.txt
pattern/construct/abstract_factory/: AbstractFactory.hpp  CMakeLists.txt  README.md  test_abstract_factory.cc
pattern/construct/abstract_factory/include/: AbstractApple.hpp  AbstractBanana.hpp  AbstractFactory.hpp  USAFactory.hpp
pattern/construct/abstract_factory/src/: CNBanana.hpp  CNFactory.hpp  USAApple.hpp  USAFactory.cpp
pattern/construct/builder/: test_builder.cc
pattern/construct/builder/src/: ConcreteBuilder.hpp
pattern/construct/factory/: CMakeLists.txt  Factory.hpp  README.md  test_factory.cc
pattern/construct/factory/include/: Setting.hpp
pattern/construct/factory/src/: SettingFactory.cpp  SettingImpl.cpp  SettingImpl.hpp
pattern/construct/prototype/: CMakeLists.txt  ObjFactory.cpp  ObjFactory.hpp  test_prototype.cc
pattern/construct/prototype/include/: Animal.hpp  ProtoType.hpp  Sheep.hpp
pattern/construct/prototype/src/: ConcreteObject.cpp  ConcreteObject.hpp
pattern/construct/singleton/: CMakeLists.txt  Singleton.hpp  test_singleton.cc
